# lavender

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
cmake/modules/: FindTagLib.cmake
lavender.app/Contents/: Info.plist
lavender.app/Contents/MacOS/: lavender
lavender.app/Contents/Resources/: Info.plist
resources/: styles.qss
scripts/: recoEngine.py
src/: albumMenu.cpp  albumMenu.h  apiFetch.cpp  apiFetch.h  audiofingerprint.cpp  audiofingerprint.h  introMenu.cpp  introMenu.h  introMenu.pro  libScan.cpp  libScan.h  main.cpp  mainMenu.cpp  mainMenu.h  mainwindow.cpp  mainwindow.h  playback.cpp  playback.h  recoMenu.cpp  recoMenu.h  songMenu.cpp  songMenu.h
tests/: benchmark_audiofingerprint.cpp  testLibscan.cpp  test_audiofingerprint.cpp  test_songdetail.cpp
